# extra-rs

./: .gitignore  Cargo.toml  README.md  pyproject.toml
benchmarks/: README.md  debug_inferencer.ipynb  debug_inferencer.py  gen_data.ipynb  inference.ipynb  inferencer.ipynb  mse.ipynb  unoptimized_inference.ipynb
examples/: README.md  extra_forest_regressor.ipynb
extra-py/: Cargo.toml
extra-py/src/: lib.rs
extra-py/src/extra_forest/: extra_forest_regressor.rs  extra_forest_regressor_inferencer.rs  mod.rs
extra-rs/: Cargo.toml
extra-rs/src/: lib.rs
extra-rs/src/data/: mod.rs  tree_dataset.rs
extra-rs/src/extra_forest/: extra_forest_classifier.rs  extra_forest_regressor.rs  extra_forest_regressor_inferencer.rs  extra_forest_settings.rs  mod.rs
extra-rs/src/extra_oblivious_tree/: mod.rs  node.rs  splitter.rs
extra-rs/src/extra_tree/: extra_tree_classifier.rs  extra_tree_regressor.rs  extra_tree_regressor_inferencer.rs  extra_tree_settings.rs  mod.rs  utils.rs
src/: lib.rs
src/data/: mod.rs  tree_dataset.rs  tree_row.rs
src/extra_forest/: extra_forest_classifier.rs  extra_forest_settings.rs  mod.rs
src/extra_tree/: extra_tree_classifier.rs  extra_tree_regressor.rs  extra_tree_settings.rs  node.rs  splitter.rs  utils.rs
src/tree/: branch.rs  leaf.rs  max_features.rs  mod.rs  node.rs  row.rs  splitter.rs  tree.rs  tree_classifier.rs  tree_regressor.rs
