[package]
name = "extra-py"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "extra_py"
crate-type = ["cdylib"]

[dependencies]
ndarray = "0.15.6"
pyo3 = "0.19.0"
extra-rs = { path = "../extra-rs" }
numpy = "0.19.0"
rayon = "1.7.0"

