[package]
name = "extra-rs"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "extra_rs"

[dependencies]
ndarray = "0.15.6"
rand = "0.8.5"
rayon = "1.7.0"

[dev-dependencies]
polars = { version = "0.31.1", features = ["parquet", "ndarray"] }
